# d2r-api

./: .dockerignore  .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.database  Dockerfile.nginx  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.dev.conf  nginx.prod.conf  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tox.ini
.github/workflows/: CI.yaml  pages.yml  pre-commit.yaml  release.yaml  upgrade-requirements.yaml
app/: __init__.py  celery.py  database.py  main.py  models.py  qc.py  schemas.py  tasks.py  tc_app.py  tc_ingester.py
app/alembic/: env.py
app/alembic/versions/: 0f8349c4729a_leuchtennummer_optional.py  336ac2d653e7_add_buddy_check.py  360e9646b9d2_qc_score.py  81904b250b67_modify_stations_table.py  910d22cb1e47_fake_views.py  aa1eae3f536c_stations_update.py  b33581fc4fec_add_qc_flags.py  bb45ada8f270_modify_stations_table.py  cc38bcd8171d_latest_view_change.py
app/routers/: auth.py  general.py  main.py  v1.py
app/templates/: metadata.html
docs/src/: architecture.md  conf.py  development.md  index.md  maintenance.md
docs/src/api/: celery.md  models.md  qc.md  routers.md  schemas.md  tasks.md
stubs/: titanlib.pyi
testing/: ATM41_DEC00546D_raw_data.csv  BLG_DEC005491_raw_data.csv  DEC005305_atm41.csv  DEC00546D_data.csv  DEC00548B_blg_data.csv  DEC005491_data.csv  DEC0054A4_data.csv  SHT35_DEC0054A4_raw_data.csv
testing/qc/: buddy_check_result.csv  data.csv  stations.csv
testing/rasters/: DO_MRT_2025_113_12_v0.7.2_cog.tif  DO_PET-class_2025_113_12_v0.7.2_cog.tif  DO_PET_2025_113_12_v0.7.2_cog.tif  DO_RH_2025_113_12_v0.7.2_cog.tif  DO_TA_2025_113_12_v0.7.2_cog.tif  DO_UTCI-class_2025_096_14_v0.7.0.tif  DO_UTCI-class_2025_113_12_v0.7.2_cog.tif  DO_UTCI_2025_113_12_v0.7.2_cog.tif  UTCI_pytherm_3m_v0.6.0_2024_177_23.tif
tests/: api_test.py  conftest.py  db_test.py  qc_test.py  tasks_test.py  tc_ingester_test.py  tc_smoke_test.py
