[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "d2r-api"
requires-python = ">=3.12"
dynamic = ["version"]

[tool.setuptools]
include-package-data = false

[tool.coverage.report]
fail_under = 50

[tool.coverage.run]
parallel = true
plugins = ["covdefaults"]
concurrency = ["greenlet", "thread"]

[tool.autopep8]
max_line_length = 88

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["testing.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
