[build-system]
requires = ["setuptools>=61.2", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "d2r-api"
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.12"
authors = [{ name = "D2R-Team", email = "climate@rub.de" }]
maintainers = [{ name = "Jonas Kittner", email = "jonas.kittner@rub.de" }]
description = "API for the Data2Resilience project providing measurements from the station network"
readme = "README.md"
[project.urls]
Homepage = "https://data2resilience.de"
Documentation = "https://api.data2resilience.de/docs"
Repository = "https://github.com/RUBclim/d2r-api"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["app"]
include-package-data = false

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["requirements-dev.txt"] } }

[tool.coverage.report]
fail_under = 50
exclude_also = [
    # needed because of: https://github.com/nedbat/coveragepy/issues/1563
    "raise NotImplementedError",
    "case _:\\n\\s*raise NotImplementedError",
]

[tool.coverage.run]
parallel = true
plugins = ["covdefaults"]
concurrency = ["greenlet", "thread"]
omit = ["app/alembic"]

[tool.autopep8]
max_line_length = 88

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
plugins = "numpy.typing.mypy_plugin"
